--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -168,7 +168,7 @@ nav a:last-of-type {
 }
 
 .seans-item-3 {
-    background-image: url(../images/seans-img.png);
+    background-image: url(../images/bas4.jpg);
 }
 
 .seans-item-4 {
